# rusted_chrome_2

./: .gitignore  Cargo.toml  README.md  dev-wasm.sh  index.html  level.ldtk
.cargo/: config.toml
.github/workflows/: release.yaml
assets/levels/: level.ldtk
assets/textures/: cyborg.json  cyborg.yml  guns.json  hands.json  shoot_effect.yml
assets/tiles/: Tiles.tsx  city.tmx
src/: animation.rs  atlas_data.rs  blood.rs  camera.rs  components.rs  debug.rs  fps.rs  lib.rs  loading.rs  main.rs  platforms.rs  player.rs  screen_diags.rs  tiled_map.rs  world.rs
src/components/: aiming.rs  facing.rs
tiled/: Tiles.tsx  city.tmx  rusted_chrome.tiled-project  rusted_chrome.tiled-session
