[package]
authors = ["Geir Sagberg <geir.sagberg@gmail.com>"]
edition = "2021"
name = "rusted_chrome"
publish = false
version = "0.1.0"

# Enable optimizations for dependencies but not for our code
[profile.dev.package."*"]
debug = false
opt-level = 3

[profile.dev]
# As of Jul/2022, opt-level=1 takes a considerable compilation time; with such configuration,
# profiling a (incremental) build showed that the large part of the time is spent in optimization
# passes.
# Since it's not clear why this happens and how to mitigate it, optimizations are entirely
# disabled.
# It's possible to specify opt-level=1 with lto=false, which is faster, but it's still considerably
# slower than opt-level=0.

[profile.release]
codegen-units = 1
lto = true

[features]
dev = [
  "bevy/dynamic",
]

[dependencies]
anyhow = "1.0.58"
bevy = "0.8"
bevy_asset_loader = {version = "0.12", features = ["stageless", "2d"]}
bevy_framepace = "0.7"
bevy_rapier2d = {version = "0.16", features = ["enhanced-determinism", "debug-render"]}
iyes_loopless = "0.7"
leafwing-input-manager = "0.5"
rand = "0.8.3"
serde = "1.0.140"
serde_yaml = "0.9.2"

[target.'cfg(target_os = "linux")'.dependencies]
winit = {version = "0.27", features = ["x11"]}

[build-dependencies]
embed-resource = "1.7"
