[package]
authors = ["Geir Sagberg <geir.sagberg@gmail.com>"]
edition = "2021"
name = "rusted_chrome"
publish = false
version = "0.1.0"

# Enable optimizations for dependencies but not for our code
[profile.dev.package."*"]
debug = false
opt-level = 3

[profile.dev]
# As of Jul/2022, opt-level=1 takes a considerable compilation time; with such configuration,
# profiling a (incremental) build showed that the large part of the time is spent in optimization
# passes.
# Since it's not clear why this happens and how to mitigate it, optimizations are entirely
# disabled.
# It's possible to specify opt-level=1 with lto=false, which is faster, but it's still considerably
# slower than opt-level=0.

[dependencies]
anyhow = "1.0.58"
bevy-inspector-egui = "0.17"
bevy_asset_loader = { version = "0.14", features = ["stageless", "2d"] }
bevy_ecs_ldtk = "0.5"
bevy_framepace = "0.11"
bevy_ggrs = "0.11"
bevy_pixel_camera = "0.3"
bevy_prototype_debug_lines = "0.9"
bevy_prototype_lyon = "0.7"
bevy_rapier2d = { version = "0.20", features = [
    "enhanced-determinism",
    "debug-render-2d",
] }
bytemuck = "1.7"
extend = "1.1"
ggrs = "0.9"
iyes_loopless = "0.9"
leafwing-input-manager = "0.8"
matchbox_socket = { version = "0.5", features = ["ggrs-socket"] }
rand = "0.8.3"
serde = "1.0.140"
serde_yaml = "0.9.2"

[dependencies.bevy]
default-features = false
features = [
    "bevy_asset",
    "bevy_winit",
    "filesystem_watcher",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "png",
]
version = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.27", features = ["x11"] }

[build-dependencies]
embed-resource = "1.7"
