[package]
authors = ["Geir Sagberg <geir.sagberg@gmail.com>"]
edition = "2021"
name = "rusted_chrome"
publish = false
version = "0.1.0"

# Enable optimizations for dependencies but not for our code
[profile.dev.package."*"]
debug = false
opt-level = 1

[profile.dev]
# As of Jul/2022, opt-level=1 takes a considerable compilation time; with such configuration,
# profiling a (incremental) build showed that the large part of the time is spent in optimization
# passes.
# Since it's not clear why this happens and how to mitigate it, optimizations are entirely
# disabled.
# It's possible to specify opt-level=1 with lto=false, which is faster, but it's still considerably
# slower than opt-level=0.

[dependencies]
anyhow = "1.0.79"
bevy = "0.12"
bevy-inspector-egui = "0.22"
bevy_asset_loader = { version = "*", features = ["2d"] }
bevy_ecs_ldtk = "0.8.0"
bevy_framepace = "0.14"
bevy_pixel_camera = "0.12"
bevy_rapier2d = { version = "0.24", features = [
    "enhanced-determinism",
    "debug-render-2d",
] }
bytemuck = "1.14"
extend = "1.2"
leafwing-input-manager = "0.11"
rand = "0.8.5"
random = "0.14.0"
serde = "1.0.196"
serde_yaml = "0.9.31"

[patch.crates-io]
bevy_ecs_ldtk = { git = "https://github.com/trouv/bevy_ecs_ldtk", branch = "main" }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", branch = "main" }
